# TelegramBotImproved

./: CMakeLists.txt  README.md
src/: bot.cpp  bot.h  main.cpp  post_service.cpp  post_service.h
src/TelegramTypes/: telegram_types.h  telegram_types_factory.cpp  telegram_types_factory.h
src/Utils/: database.cpp  database.h  file_downloader.cpp  file_downloader.h  logger.cpp  logger.h  pretty_printers.cpp  pretty_printers.h  singleton.h  tesseract_ocr.cpp  tesseract_ocr.h  text_utils.cpp  text_utils.h  translater.cpp  translater.h
